# EmotionAnalysis

./: .gitignore  BERT_Emotion_Analysis (1).ipynb  LICENSE  Machine Learning pipeline.ipynb  README.md  exploratory_analysis.ipynb  main.py  pyproject.toml
conf/: config.yaml
conf/dataset/: electoral_tweets.yaml  tec.yaml
conf/model/: model.yaml
conf/model/optimizer/: adam.yaml  adamw.yaml
src/: dataset.py  model.py
